--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 	</div>
 <div class="gridBottom">
 	<figure class="imageOne">
-		<img src="tacos.png" alt="Al Pastor Tacos">
+		<img src="tacos.jpg" alt="Al Pastor Tacos">
 		<figcaption><h4>Al Pastor Tacos</h4></figcaption>
 	</figure>
 	<figure class="imageTwo">
